          CHANGES IN SOUNDGEN VERSION 1.7.0.9000 [--date--]
BUGS FIXED:
  * morph() accepts vectors like "vibratoFreq = c(0, 3)" in both formulas without crashing
  * pitch_app() saves all files propertly if multiple folders are opened consecutively without saving the output
  * spectrogram(): corrected frequency labels
  * filterSoundByMS(): the argument "action = c('remove', 'preserve')" now has an effect

MINOR:
  * soundgen(): smoothing(list = ...) regulates interpolation of pitch and amplitude contours. Arguments "interpol", "discontThres", and "jumpThres" are thus deprecated (moved to "smoothing"), and an extra argument "loessSpan" is added to regulate the amount of smoothing
  * estimateVTL(): the plot shows Cook's distance as a measure of the influence of each formant frequency on apparent VTL
  * osc() replaces osc_db()
  * osc(), spectrogram(): fast plotting of long audio files, updated tick labels
  * pitch_app(): caching to speed up the plotting of long files
  * analyze(): new arguments from/to to analyze only a part of sound


          CHANGES IN SOUNDGEN VERSION 1.7.0 [24-May-2020]
MAJOR (affects back-compatibility):
  (1) A modified way of creating subharmonics and sidebands in soundgen():
    * The old argument "subDep"" now controls the max amplitude of g0 vs f0 harmonics, while a new argument "subWidth" controls the width of sidebands. Check your old code! Setting "subDep = 100, subWidth = old_value_of_subDep" gives the same results as in earlier versions of soundgen
    * A new argument "subRatio" controls the number of subharmonics, but this behavior can be overridden by the old argument "subFreq"
  (2) All pitch-tracker-specific arguments in analyze() are provided as lists:
    * All arguments starting with "dom", "autocor", "cep", and "spec" are deprecated
    * Instead, use "pitchDom = list(...old arugments...)", "pitchAutocor = list()", etc.
  (3) Some arguments have been removed, notably: